--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,12 @@
 	<version>1.0-SNAPSHOT</version>
 	<name>dynamic-jasper-example</name>
 	<url>http://maven.apache.org</url>
+	<repositories>
+		<repository>
+			<id>fdvsolution.public</id>
+			<url>http://archiva.fdvs.com.ar/repository/public1/</url>
+		</repository>
+	</repositories>
 	<dependencies>
 		<dependency>
 			<groupId>net.sf.jasperreports</groupId>
